// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SafelySetInnerHTML renders correctly 1`] = `
<p>
  Hello 
  <strong>
    World !
  </strong>
</p>
`;

exports[`SafelySetInnerHTML renders correctly 2`] = `
<cite>
  About the 
  <a
    href="http://example.com"
  >
    Author !
  </a>
</cite>
`;

exports[`SafelySetInnerHTML renders only allowedTags 1`] = `
<p>
  Hello 
  World !
</p>
`;

exports[`SafelySetInnerHTML should prevent basic XSS attacks 1`] = `
<div>
  
      
  <style>
    
        [ontransitionend] {
          transition: all 0.2s;
        }
        [ontransitionend]:hover {
          color: black;
        }
      
  </style>
  
      
  <div>
    XSS Attack
  </div>
  
    
</div>
`;

exports[`SafelySetInnerHTML should work with React special properties 1`] = `
Array [
  "
      ",
  <article
    class="article"
  >
    
        
    <h2
      class="article__title"
    >
      Article title
    </h2>
          
        
    <p
      class="article__content"
    >
      Lorem ipsum dolor sit amet
    </p>
          
      
  </article>,
  "
    ",
]
`;
